--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module_01</title>
-    <script src="js/script.js"></script>
-    <script src="js/tasks.js"></script>
+    <!-- <script src="js/script.js"></script>
+    <script src="js/tasks.js"></script> -->
+    <script src="js/tasksHard_1.js"></script>
+    <script src="js/tasksHard_2.js"></script>
 </head>
 <body>
     <h1>Module_01</h1>
